[project]
name = "comfyui-ui-zh-chinese"
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ZHO-ZHO-ZHO/ComfyUI-UI-Zh-Chinese"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-UI-Zh-Chinese"
Icon = ""
